Fix autorelease; build only Windows Looks like there's some more setup to be done to set up other platforms.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+        os: [windows-latest] #, macos-latest, ubuntu-latest]
         include:
           - os: windows-latest
             target: windows
@@ -36,9 +36,7 @@ jobs:
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: ${{ github.event.repository.updated_at }}
+        automatic_release_tag: "latest"
         prerelease: true
         title: ${{ github.event.repository.updated_at }}
         files: 'build/${{ matrix.target }}/runner/release/*.exe'
-
-
