--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,29 +48,31 @@ jobs:
   autorelease:
     needs: build
     if: github.event_name == 'push'
+    name: Auto Release Build
     steps:
-      - name: Get Current Time
-        uses: josStorer/get-current-time@v2.0.1
-        id: current-time
-        with:
-          format: YYYYMMDD-HH
-          utcOffset: "+00:00"
-        - name: Auto Prerelease Binaries
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          # FIXME: very long line :P
-          automatic_release_tag: "${{ steps.current-time.outputs.year }}-${{ steps.current-time.outputs.month }}-${{ steps.current-time.outputs.day }} ${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-${{ steps.current-time.outputs.second }}"
-          prerelease: true
-          title: ${{ github.event.repository.updated_at }}
-          files: '${{ github.event.repository.name }}-*.zip'
+    - name: Get Current Time
+      uses: josStorer/get-current-time@v2.0.1
+      id: current-time
+      with:
+        format: YYYYMMDD-HH
+        utcOffset: "+00:00"
+      - name: Auto Prerelease Binaries
+      uses: marvinpinto/action-automatic-releases@latest
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        # FIXME: very long line :P
+        automatic_release_tag: "${{ steps.current-time.outputs.year }}-${{ steps.current-time.outputs.month }}-${{ steps.current-time.outputs.day }} ${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-${{ steps.current-time.outputs.second }}"
+        prerelease: true
+        title: ${{ github.event.repository.updated_at }}
+        files: '${{ github.event.repository.name }}-*.zip'
 
   manualrelease:
     needs: build
     if: github.event_name == 'release' && github.event.action == 'created'
+    name: Add Build to Manually Created Tag
     steps:
-      - name: Add Binaries to Manual Releases
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-          with:
-            files: ${{ github.event.repository.name }}-*.zip
+    - name: Add Binaries to Manual Releases
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ${{ github.event.repository.name }}-*.zip
