--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,10 @@
 name: Build and Release Executables
-on:
-  push:
-    tags-ignore:
-      - '**'
-  release:
-    types: [created]
+on: push
+  # push:
+  #   tags-ignore:
+  #     - '**'
+  # release:
+  #   types: [created]
 
 jobs:
   build:
@@ -45,36 +45,30 @@ jobs:
         files: build/${{ matrix.target }}/runner/release/
         dest: '${{ github.event.repository.name }}-${{ matrix.target }}.zip'
 
-  autorelease:
-    needs: build
-    if: github.event_name == 'push'
-    name: Auto Release Build
-    runs-on: windows-latest
-    steps:
     - name: Get Current Time
       uses: josStorer/get-current-time@v2.0.1
       id: current-time
       with:
-        format: YYYYMMDD-HH
+        format: YYYYMMDD
         utcOffset: "+00:00"
+
     - name: Auto Prerelease Binaries
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        # FIXME: very long line :P
-        automatic_release_tag: "${{ steps.current-time.outputs.year }}-${{ steps.current-time.outputs.month }}-${{ steps.current-time.outputs.day }} ${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-${{ steps.current-time.outputs.second }}"
+        automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}-${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}"
         prerelease: true
         title: ${{ github.event.repository.updated_at }}
         files: '${{ github.event.repository.name }}-*.zip'
 
-  manualrelease:
-    needs: build
-    if: github.event_name == 'release' && github.event.action == 'created'
-    name: Add Build to Manually Created Tag
-    runs-on: windows-latest
-    steps:
-    - name: Add Binaries to Manual Releases
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: ${{ github.event.repository.name }}-*.zip
+  # manualrelease:
+  #   needs: build
+  #   if: github.event_name == 'release' && github.event.action == 'created'
+  #   name: Add Build to Manually Created Tag
+  #   runs-on: windows-latest
+  #   steps:
+  #   - name: Add Binaries to Manual Releases
+  #     uses: softprops/action-gh-release@v1
+  #     if: startsWith(github.ref, 'refs/tags/')
+  #     with:
+  #       files: ${{ github.event.repository.name }}-*.zip
