--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,14 +49,14 @@ jobs:
       uses: josStorer/get-current-time@v2.0.1
       id: current-time
       with:
-        format: YYYYMMDD
+        format: YYYY-MM-DD
         utcOffset: "+00:00"
 
     - name: Auto Prerelease Binaries
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}-${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}"
+        automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}at${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-utc"
         prerelease: true
         title: ${{ github.event.repository.updated_at }}
         files: '${{ github.event.repository.name }}-*.zip'
