--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,10 @@ jobs:
         include:
           - os: windows-latest
             target: windows
-          # - os: macos-latest
-          #   target: macos
-          # - os: ubuntu-latest
-          #   target: linux
+          - os: macos-latest
+            target: macos
+          - os: ubuntu-latest
+            target: linux
     steps:
     - name: Clone Flutter
       uses: subosito/flutter-action@v2
@@ -32,6 +32,11 @@ jobs:
 
     - name: Checkout Repository
       uses: actions/checkout@v3
+
+    - name: Add Support for All Platforms
+      run: |
+        flutter config --enable-${{ matrix.os }}-desktop
+        flutter create .
 
     - name: Install Packages
       run: flutter pub get -v
