--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,27 +39,33 @@ jobs:
     - name: Build Executable
       run: flutter build ${{ matrix.target }} -v
 
-    - name: Zip Executable Files
-      uses: vimtor/action-zip@v1
-      with:
-        files: build/${{ matrix.target }}/runner/release/
-        dest: '${{ github.event.repository.name }}-${{ matrix.target }}.zip'
+    # - name: Zip Executable Files
+    #   uses: vimtor/action-zip@v1
+    #   with:
+    #     files: build/${{ matrix.target }}/runner/release/
+    #     dest: '${{ github.event.repository.name }}-${{ matrix.target }}.zip'
 
-    - name: Get Current Time
-      uses: josStorer/get-current-time@v2.0.1
-      id: current-time
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v3
       with:
-        format: YYYY-MM-DD
-        utcOffset: "+00:00"
+        name: release-{{ matrix.target }}
+        path: 'build/${{ matrix.target }}/runner/release/'
 
-    - name: Auto Prerelease Binaries
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}at${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-utc"
-        prerelease: true
-        title: ${{ github.event.repository.updated_at }}
-        files: '${{ github.event.repository.name }}-*.zip'
+    # - name: Get Current Time
+    #   uses: josStorer/get-current-time@v2.0.1
+    #   id: current-time
+    #   with:
+    #     format: YYYY-MM-DD
+    #     utcOffset: "+00:00"
+
+    # - name: Auto Prerelease Binaries
+    #   uses: marvinpinto/action-automatic-releases@latest
+    #   with:
+    #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+    #     automatic_release_tag: "${{ steps.current-time.outputs.formattedTime }}at${{ steps.current-time.outputs.hour }}-${{ steps.current-time.outputs.minute }}-utc"
+    #     prerelease: true
+    #     title: ${{ github.event.repository.updated_at }}
+    #     files: '${{ github.event.repository.name }}-*.zip'
 
   # manualrelease:
   #   needs: build
