--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,13 @@ jobs:
       run: flutter build ${{ matrix.target }} -v
 
     - name: Print File Tree (macOS)
-      if: runner.os == "macOS"
+      if: runner.os == macOS
       run: |
         brew install tree
         tree
 
     - name: Print File Tree (Linux)
-      if: runner.os == 'Linux'
+      if: runner.os == Linux
       run: |
         sudo apt install -y tree
         tree
