--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: release-{{ matrix.target }}
+        name: release-${{ matrix.target }}
         path: 'build/'
 
     # - name: Get Current Time
