--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   build:
-    name: Build and Upload Artifacts
+    name: Build and Upload Executables
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -48,6 +48,14 @@ jobs:
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
+      if: !startsWith(github.ref, 'refs/tags/')
       with:
         name: release-${{ matrix.target }}
         path: ${{ matrix.bin-path }}
+
+    - name: Upload Release Executables
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ${{ matrix.bin-path }}
+        generate_release_notes: true
