--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
-      if: \!startsWith(github.ref, 'refs/tags/')
+      if: ${{ !startsWith(github.ref, 'refs/tags/') }}
       with:
         name: release-${{ matrix.target }}
         path: ${{ matrix.bin-path }}
