--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,9 +53,16 @@ jobs:
         name: release-${{ matrix.target }}
         path: ${{ matrix.bin-path }}
 
+    - name: Zip Executable Files
+      uses: vimtor/action-zip@v1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: ${{ matrix.bin-path }}
+        dest: 'release-${{ matrix.target }}.zip'
+
     - name: Upload Release Executables
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ${{ matrix.bin-path }}
+        files: release-${{ matrix.target }}.zip
         generate_release_notes: true
